{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "GamePlay",
            "id": "08c0a7ba-594d-452d-b0d4-9eb348925ab9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8c37bfd8-8d41-4868-9081-bd7784c69b5d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "bc3967d1-5258-4a46-b554-9316ac8f4387",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crounch",
                    "type": "Value",
                    "id": "6a434168-6ce7-4054-8dde-2564613e0b57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "3f0f1b48-975a-4094-be67-e06030ed3955",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "92af4e29-fe7c-4dc9-a30e-98836d7cda3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7814bf7c-7551-4f9a-8f73-5bad8d396ccf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "91cdf1b4-6204-4123-b418-a73e71bd6812",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "536a9eca-9d47-48ba-ab1d-ceef2d914b66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "fdb397a0-4d95-40b8-bb38-2bd8e9cdc4d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "c6d36892-d920-42e6-96c5-bf7da6d0c1fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e54797ea-c3fb-42bf-b7b0-fa2d22649ecc",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e327f1d7-06e3-4365-9f83-0011c902e12b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d2d27a52-cafc-4238-86ad-05f7a8941785",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "61377f79-d4cc-445a-9369-c4dfbf1ad54e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ff936872-7851-4006-b658-6d1c40b97573",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e7d6ed0a-41b7-480a-87c9-a4ce21e4b9fb",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5933ebf-d529-49b9-9277-a1f0a3da7b11",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crounch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07e9228f-e812-427d-a013-398731a0385c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfd3c932-5a51-45e9-b304-0c8f1c554f1b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b58d6b4f-dc4f-49c2-b299-bc972dde5c79",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.05,y=0.05)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dfc6774-6f3a-4a1a-a487-85a61420371c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ba71406-d743-4f2a-8489-fa594acf34f2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e439134-455b-43cc-875f-73c4cfd3e851",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae95897d-5683-404e-a307-9a6e99e43e55",
                    "path": "<Keyboard>/w",
                    "interactions": "MultiTap(tapTime=0.1,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b694cd4b-db42-4625-8e2e-0d42f795b260",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "744e1074-ccd5-47a3-acd5-b8e3b8b9ed0e",
            "actions": [
                {
                    "name": "UI_LeftClick",
                    "type": "Button",
                    "id": "21335570-e261-463d-bb35-c04c23c8f329",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_RightClick",
                    "type": "Button",
                    "id": "536ac927-3ca3-4af3-b3d3-8ca650045dab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_Exit",
                    "type": "Button",
                    "id": "3dca5be0-562f-450c-a6f8-2e539c96884c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84ef27f7-6474-4b1a-bd4d-102c05148e67",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28aa8205-ad95-4d1c-8503-5a8707db989a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abbb3364-e935-492c-a217-3b0e322c36df",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d09a0a92-fc6b-4036-89f0-b613d46bd53b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UI_Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "6714484d-9122-4a44-ba1d-4f9dab316bdf",
            "actions": [
                {
                    "name": "Pointer",
                    "type": "Value",
                    "id": "eb689cca-375f-45ab-a639-0f2e567b57db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "31a33e64-e782-4014-9997-846fa1ee84d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Debugging",
                    "type": "Button",
                    "id": "a2423db9-2db7-45ec-bd57-8c956b9a8307",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "720015b7-2d8f-41d2-9fdb-ad806cbcf15c",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89a36f66-f996-4b16-bd55-518bde7d9994",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a59b922-44d1-4a16-b785-849b5ff4c2c5",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debugging",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}